添加promise异常处理以及测试包

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MyDAIDAI/Promise#readme",
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "promises-aplus-tests": "^2.1.2"
   }
 }
